<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">ColourMemory</string>
    <string name="current_score" >Current Score</string>
    <string name="high_scores">High Scores</string>
    <string name="_score">Score : %d</string>
    <string name="_rank">Rank : %d</string>
    <string name="save">Save</string>
    <string name="enter_yout_name">Enter your name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="reset">Reset</string>

</resources>
