<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#50FFFFFF"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_score_in_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/_score"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_rank_in_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_score_in_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/_rank"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_rank_in_dialog"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/btn_save"
        android:layout_toStartOf="@+id/btn_save"
        android:ems="10"
        android:hint="@string/enter_yout_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_rank_in_dialog"
        android:layout_marginTop="10dp"
        android:text="@string/save" />
</RelativeLayout>